--- a/pod/06-probe.yaml
+++ b/pod/06-probe.yaml
@@ -8,7 +8,7 @@ spec:
    name: nginx
    livenessProbe:
      httpGet:
-       path: /
+       path: /healthz
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3
