--- a/pod/01-pod.yaml
+++ b/pod/01-pod.yaml
@@ -1,10 +1,10 @@
-apiVersion: v1.1
-kind: pod
+apiVersion: v1
+kind: Pod
 metadata:
- name: nginx
+  name: nginx
 spec:
- containers:
+  containers:
   - name: nginx
-    image: nginx:III
+    image: nginx:1111
     ports:
-    - containerport: 80
+    - containerPort: 80
