--- a/pod/01-pod.yaml
+++ b/pod/01-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: multi
 spec:
   containers:
   - name: nginx
@@ -10,3 +10,4 @@ spec:
     - containerPort: 80
   - name: almalinux
     image: almalinux
+    command: ["sleep","15"]
