--- a/pod/02-labels.yaml
+++ b/pod/02-labels.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
- name: label-pod
- labels:
-   cource: docker
-   duration: 25hrs
-   tariner: siva
+  name: label-pod
+  labels:
+    cource: docker
+    duration: 25hr
+    trainer: siva
 spec:
- containers:
- - name: nginx
-   image: nginx
+  containers:
+  - name: nginx
+    image: nginx:1.14.2
+    ports:
+    - containerPort: 80
