--- a/pod/02-labels.yaml
+++ b/pod/02-labels.yaml
@@ -6,9 +6,11 @@ metadata:
     cource: docker
     duration: 25hr
     trainer: siva
+  annotations:
+    org.docker.kubernetes.maintainer: siva
 spec:
   containers:
   - name: nginx
-    image: nginx:1.14.2
+    image: nginx
     ports:
     - containerPort: 80
