--- a/pod/06-env.yaml
+++ b/pod/06-env.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
-kind: pod
+kind: Pod
 metadata:
- name: env-pod
+  name: env-pod
 spec:
- containers:
- - name: nginx
-   image: nginx
-   env:
-   - name: cource
+  containers:
+  - name: nginx
+    image: nginx
+    env:
+    - name: cource
      value: docker
-   - name: trainer
+    - name: trainer
      value: siva
