--- a/sets/02-deployment.yaml
+++ b/sets/02-deployment.yaml
@@ -5,10 +5,15 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 10
+  replicas: 3
   selector:
     matchLabels:
       app: nginx
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -16,6 +21,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:latest
+        image: nginx:1.22.1
         ports:
         - containerPort: 80
