--- a/sets/02-deployment.yaml
+++ b/sets/02-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 3
+  replicas: 10
   selector:
     matchLabels:
       app: nginx
@@ -21,6 +21,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.22.1
+        image: nginx:latest
         ports:
         - containerPort: 80
